# hello-world-collection

./: .gitignore  README.md
LaTeX/: Makefile
PBKDF2/: hello.c
VHDL/: Makefile  README.md  hello.vhdl
argon2/: Makefile  README.md  main.c
asm/: Makefile  README.md
awk/: README.md  hello.awk
build systems/autotools/: README.md  configure.ac
build systems/bazel/: MODULE.bazel  README.md
build systems/cmake/: CMakeLists.txt  README.md  foo.c  foo.h  hello.c
build systems/make/: Makefile  README.md
build systems/meson/: README.md  meson.build
build systems/scons/: README.md  SConstruct
c/: Makefile  hello.c
cairo/: Makefile  README.md
cjson/: Makefile  README.md  hello.c  sample.json
cmake/: CMakeLists.txt
cybersecurity/PBKDF2/: Makefile  README.md
cybersecurity/argon2/: Makefile
express.js/: README.md  hello.js  package.json
getopt_long/: README.md  hello.c
graphics/cairo/: hello.c
graphics/glade/: README.md  hello.c  hello.glade
graphics/gtk/: README.md
graphviz/: Makefile  README.md  hello.dot
gtk/: Makefile  hello.c  style.css
libcurl/: Makefile  README.md  hello.c
libpng/: Makefile  README.md
libraries/actix-web/: Cargo.toml  README.md
libraries/actix-web/src/: get_double.rs  get_hello.rs  get_json.rs  get_session.rs  main.rs
libraries/actix-web/static/root/: index.html  style.css
lua/: Makefile  hello.c
ncurses/: Makefile  hello.c
semaphores/: Makefile  server.c
shared_memory/: Makefile  README.md  client.c
sqlite3/: README.md  hello.c
verilog/: Makefile  README.md  hello.v
yacc/: Makefile  hello.y
(+189 files in other folders)
